# wdip-fe/src/service/wdip-be/apis/PartyApi.ts
@@ -1,0 +1,53 @@
+// tslint:disable
+/**
+ * WDIP
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: markus@silberstein.nu
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import {
+    Party,
+    PartyFromJSON,
+    PartyToJSON,
+} from '../models';
+
+/**
+ * no description
+ */
+export class PartyApi extends runtime.BaseAPI {
+
+    /**
+     * Gets data for all the parties, i.e. GAL-TAN position and party color
+     */
+    async getAllPartiesRaw(): Promise<runtime.ApiResponse<Array<Party>>> {
+        const queryParameters: runtime.HTTPQuery = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/partydata/allparties`,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        });
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(PartyFromJSON));
+    }
+
+    /**
+     * Gets data for all the parties, i.e. GAL-TAN position and party color
+     */
+    async getAllParties(): Promise<Array<Party>> {
+        const response = await this.getAllPartiesRaw();
+        return await response.value();
+    }
+
+}
