# wdip-fe/src/service/wdip-be/models/index.ts
@@ -1,0 +1,5 @@
+export * from './ErrorModel';
+export * from './MotionsByParty';
+export * from './MotionsByPartyResults';
+export * from './Party';
+export * from './Word';
